--- a/app/views/halo4/view_match/_view_spartan_ops.html.haml
+++ b/app/views/halo4/view_match/_view_spartan_ops.html.haml
@@ -1,216 +1,221 @@
 - chapter = get_spartan_ops_data_from_chapter_id(@match['ChapterId'])
 - title " - #{chapter['Name']} as #{@service_record['Gamertag']}"
+- content_for :twitter_meta do
+	%meta{:content => "Branch - #{chapter['Name']} on #{@match['MapName']}", :name => "twitter:title"}
+	%meta{:content => "Halo 4 Spartan Ops Match, #{@match['MapName']}, at #{DateTime.strptime(@match['EndDateUtc'], '%Y-%m-%dT%H:%M:%SZ').strftime('%d.%m.%Y')} lasting #{@duration.min} Minutes and #{@duration.sec} Seconds. Top player was #{@top_player['Gamertag']}, who led the game with a K/D Ratio of #{ (@top_player['Kills'].to_f / @top_player['Deaths'].to_f).to_f.round(2) }", :name => "twitter:description"}
+	%meta{:content => X343ApiController.asset_url_generator_basic(@match['MapImageUrl']['BaseUrl'], @match['MapImageUrl']['AssetUrl'], 'large'), :name => "twitter:image:src"}
+	
 
 .well
-  %h3
-    #{chapter['Title']}
-    %br/
-  %h5
-    #{chapter['Description']}
+	%h3
+		#{chapter['Title']}
+		%br/
+	%h5
+		#{chapter['Description']}
 
-  %hr/
+	%hr/
 
-  .row-fluid
-    .cover{ :style => "background-image: url('#{X343ApiController.asset_url_generator_basic(chapter['ImageUrl']['BaseUrl'], chapter['ImageUrl']['AssetUrl'], 'large')}')" }
-      .mask
-        .game-victor-player-model{ :style => "background-image: url('#{X343ApiController.GetPlayerModel(@top_player['Gamertag'], 'medium')}')" }
-          = render :partial => 'halo4/view_match/cover/spartan_ops', :locals => { :chapter => chapter }
+	.row-fluid
+		.cover{ :style => "background-image: url('#{X343ApiController.asset_url_generator_basic(chapter['ImageUrl']['BaseUrl'], chapter['ImageUrl']['AssetUrl'], 'large')}')" }
+			.mask
+				.game-victor-player-model{ :style => "background-image: url('#{X343ApiController.GetPlayerModel(@top_player['Gamertag'], 'medium')}')" }
+					= render :partial => 'halo4/view_match/cover/spartan_ops', :locals => { :chapter => chapter }
 
-    .game-stats
-      %ul.game-stat-tabs.nav.nav-tabs
-        %li.active
-          %a.switch-content-tab{:href => '#A', "data-toggle" => 'tab'}
-            Results
-        %li
-          %a.switch-content-tab{:href => '#B', "data-toggle" => 'tab'}
-            Carnage
-        %li
-          %a.switch-content-tab{:href => '#C', "data-toggle" => 'tab'}
-            Medals
-        %li
-          %a.switch-content-tab{:href => '#D', "data-toggle" => 'tab'}
-            Enemies
+		.game-stats
+			%ul.game-stat-tabs.nav.nav-tabs
+				%li.active
+					%a.switch-content-tab{:href => '#A', "data-toggle" => 'tab'}
+						Results
+				%li
+					%a.switch-content-tab{:href => '#B', "data-toggle" => 'tab'}
+						Carnage
+				%li
+					%a.switch-content-tab{:href => '#C', "data-toggle" => 'tab'}
+						Medals
+				%li
+					%a.switch-content-tab{:href => '#D', "data-toggle" => 'tab'}
+						Enemies
 
-      .carnage-report-header-graph
-        %div{ :id => 'graph-carnage-header-kills', :style => 'margin: 0 auto; width: 100%; height: 350px;' }
-        %div{ :id => 'graph-carnage-header-deaths', :style => 'margin: 0 auto; width: 100%; height: 350px;' }
-        %div{ :id => 'graph-carnage-header-medals', :style => 'margin: 0 auto; width: 100%; height: 350px;' }
+			.carnage-report-header-graph
+				%div{ :id => 'graph-carnage-header-kills', :style => 'margin: 0 auto; width: 100%; height: 350px;' }
+				%div{ :id => 'graph-carnage-header-deaths', :style => 'margin: 0 auto; width: 100%; height: 350px;' }
+				%div{ :id => 'graph-carnage-header-medals', :style => 'margin: 0 auto; width: 100%; height: 350px;' }
 
-        %div{ :style => 'margin: 15px 0 25px 0; text-align: center;' }
-          Carnage Timeline:
-          %a.global-carnage-stats-over-time{ :id => 'global-kills-over-time', :href => '#global-kills-over-time' }
-            Kills
-          |
-          %a.global-carnage-stats-over-time{ :id => 'global-deaths-over-time', :href => '#global-deaths-over-time' }
-            Deaths
-          |
-          %a.global-carnage-stats-over-time{ :id => 'global-medals-over-time', :href => '#global-medals-over-time' }
-            Medals
+				%div{ :style => 'margin: 15px 0 25px 0; text-align: center;' }
+					Carnage Timeline:
+					%a.global-carnage-stats-over-time{ :id => 'global-kills-over-time', :href => '#global-kills-over-time' }
+						Kills
+					|
+					%a.global-carnage-stats-over-time{ :id => 'global-deaths-over-time', :href => '#global-deaths-over-time' }
+						Deaths
+					|
+					%a.global-carnage-stats-over-time{ :id => 'global-medals-over-time', :href => '#global-medals-over-time' }
+						Medals
 
-      .carnage-quick-view
-        = render :partial => 'halo4/view_match/carnage_quick_view/carnage_campaign_engine', :object => @match
+			.carnage-quick-view
+				= render :partial => 'halo4/view_match/carnage_quick_view/carnage_campaign_engine', :object => @match
 
-      .tabbable
-        .tab-content
-          .tab-pane.active{ :id => 'A' }
-            / yolo
-          .tab-pane{ :id => 'B' }
-            = render :partial => 'halo4/view_match/carnage_details/carnage_report', :object => @match
-          .tab-pane{ :id => 'C' }
-            = render :partial => 'halo4/view_match/carnage_details/medal_report', :object => @match
-          .tab-pane{ :id => 'D' }
-            = render :partial => 'halo4/view_match/carnage_details/enemy_report', :object => @match
+			.tabbable
+				.tab-content
+					.tab-pane.active{ :id => 'A' }
+						/ yolo
+					.tab-pane{ :id => 'B' }
+						= render :partial => 'halo4/view_match/carnage_details/carnage_report', :object => @match
+					.tab-pane{ :id => 'C' }
+						= render :partial => 'halo4/view_match/carnage_details/medal_report', :object => @match
+					.tab-pane{ :id => 'D' }
+						= render :partial => 'halo4/view_match/carnage_details/enemy_report', :object => @match
 
 
 
 :javascript
 
-  // Player Linker, yolo
-  $('.player-linker').click(function () {
-    var player_id = $(this).attr('playerid');
-    var tab_id = '';
+	// Player Linker, yolo
+	$('.player-linker').click(function () {
+		var player_id = $(this).attr('playerid');
+		var tab_id = '';
 
-    $('.game-stat-tabs li.active').each(function (index) {
-      tab_id = $(this).find('a').text();
-    });
+		$('.game-stat-tabs li.active').each(function (index) {
+			tab_id = $(this).find('a').text();
+		});
 
-    if (tab_id.indexOf("Carnage") >= 0) {
-      show_carnage_for_player(player_id);
-      return false;
-    }
-    else if (tab_id.indexOf("Medals") >= 0) {
-      show_medals_for_player(player_id);
-      return false;
-    }
-    else if (tab_id.indexOf("Player Summar") >= 0) {
-      show_personal_for_player(player_id);
-      return false;
-    }
-    else if (tab_id.indexOf("Enemies") >= 0) {
-      show_enemys_for_player(player_id);
-      return false;
-    }
+		if (tab_id.indexOf("Carnage") >= 0) {
+			show_carnage_for_player(player_id);
+			return false;
+		}
+		else if (tab_id.indexOf("Medals") >= 0) {
+			show_medals_for_player(player_id);
+			return false;
+		}
+		else if (tab_id.indexOf("Player Summar") >= 0) {
+			show_personal_for_player(player_id);
+			return false;
+		}
+		else if (tab_id.indexOf("Enemies") >= 0) {
+			show_enemys_for_player(player_id);
+			return false;
+		}
 
-    return true;
-  });
+		return true;
+	});
 
-  // Drawing x-over-time graphs
-  Morris.Line({
-    element: 'graph-carnage-header-kills',
-    data: [
-      #{draw_spartan_ops_carnage_graph('KillsOverTime')}
-    ],
-    xkey: 't',
-    ykeys: [ #{raw create_spartan_ops_carnage_graph_ykeys} ],
-    labels: [ #{raw create_spartan_ops_carnage_graph_labels} ],
-    hideHover: 'always',
-    #{create_spartan_ops_carnage_graph_line_colours}
-  });
-  Morris.Line({
-    element: 'graph-carnage-header-deaths',
-    data: [
-      #{draw_spartan_ops_carnage_graph('DeathsOverTime')}
-    ],
-    xkey: 't',
-    ykeys: [ #{raw create_spartan_ops_carnage_graph_ykeys} ],
-    labels: [ #{raw create_spartan_ops_carnage_graph_labels} ],
-    hideHover: 'always',
-    #{create_spartan_ops_carnage_graph_line_colours}
-  });
-  Morris.Line({
-    element: 'graph-carnage-header-medals',
-    data: [
-      #{draw_spartan_ops_carnage_graph('MedalsOverTime')}
-    ],
-    xkey: 't',
-    ykeys: [ #{raw create_spartan_ops_carnage_graph_ykeys} ],
-    labels: [ #{raw create_spartan_ops_carnage_graph_labels} ],
-    hideHover: 'always',
-    #{create_spartan_ops_carnage_graph_line_colours}
-  });
+	// Drawing x-over-time graphs
+	Morris.Line({
+		element: 'graph-carnage-header-kills',
+		data: [
+			#{draw_spartan_ops_carnage_graph('KillsOverTime')}
+		],
+		xkey: 't',
+		ykeys: [ #{raw create_spartan_ops_carnage_graph_ykeys} ],
+		labels: [ #{raw create_spartan_ops_carnage_graph_labels} ],
+		hideHover: 'always',
+		#{create_spartan_ops_carnage_graph_line_colours}
+	});
+	Morris.Line({
+		element: 'graph-carnage-header-deaths',
+		data: [
+			#{draw_spartan_ops_carnage_graph('DeathsOverTime')}
+		],
+		xkey: 't',
+		ykeys: [ #{raw create_spartan_ops_carnage_graph_ykeys} ],
+		labels: [ #{raw create_spartan_ops_carnage_graph_labels} ],
+		hideHover: 'always',
+		#{create_spartan_ops_carnage_graph_line_colours}
+	});
+	Morris.Line({
+		element: 'graph-carnage-header-medals',
+		data: [
+			#{draw_spartan_ops_carnage_graph('MedalsOverTime')}
+		],
+		xkey: 't',
+		ykeys: [ #{raw create_spartan_ops_carnage_graph_ykeys} ],
+		labels: [ #{raw create_spartan_ops_carnage_graph_labels} ],
+		hideHover: 'always',
+		#{create_spartan_ops_carnage_graph_line_colours}
+	});
 
-  $(document).ready(function () {
-    $('#graph-carnage-header-kills').css('display', 'block');
-    $('#graph-carnage-header-deaths').css('display', 'none');
-    $('#graph-carnage-header-medals').css('display', 'none');
-  });
-  function hide_graphs() {
-    $('#graph-carnage-header-kills').css('display', 'none');
-    $('#graph-carnage-header-deaths').css('display', 'none');
-    $('#graph-carnage-header-medals').css('display', 'none');
-  }
-  $('#global-kills-over-time').click(function () {
-    hide_graphs();
-    $('#graph-carnage-header-kills').css('display', 'block');
-    return false;
-  });
-  $('#global-deaths-over-time').click(function () {
-    hide_graphs();
-    $('#graph-carnage-header-deaths').css('display', 'block');
-    return false;
-  });
-  $('#global-medals-over-time').click(function () {
-    hide_graphs();
-    $('#graph-carnage-header-medals').css('display', 'block');
-    return false;
-  });
+	$(document).ready(function () {
+		$('#graph-carnage-header-kills').css('display', 'block');
+		$('#graph-carnage-header-deaths').css('display', 'none');
+		$('#graph-carnage-header-medals').css('display', 'none');
+	});
+	function hide_graphs() {
+		$('#graph-carnage-header-kills').css('display', 'none');
+		$('#graph-carnage-header-deaths').css('display', 'none');
+		$('#graph-carnage-header-medals').css('display', 'none');
+	}
+	$('#global-kills-over-time').click(function () {
+		hide_graphs();
+		$('#graph-carnage-header-kills').css('display', 'block');
+		return false;
+	});
+	$('#global-deaths-over-time').click(function () {
+		hide_graphs();
+		$('#graph-carnage-header-deaths').css('display', 'block');
+		return false;
+	});
+	$('#global-medals-over-time').click(function () {
+		hide_graphs();
+		$('#graph-carnage-header-medals').css('display', 'block');
+		return false;
+	});
 
 
-  // Initial Page Load Graph Hiding, ye
-  $(document).ready(function() {
-    $('.carnage-report-header-graph').css('display', 'none');
-  });
+	// Initial Page Load Graph Hiding, ye
+	$(document).ready(function() {
+		$('.carnage-report-header-graph').css('display', 'none');
+	});
 
-  // Hiding/Showing x-over-time graphs
-  $('.switch-content-tab').click(function() {
-    var destination = $(this).attr('href');
+	// Hiding/Showing x-over-time graphs
+	$('.switch-content-tab').click(function() {
+		var destination = $(this).attr('href');
 
-    if (destination == "#A") {
-      // hide graphs
-      $('.carnage-report-header-graph').css('display', 'none');
-    }
-    else {
-      // Show dem graphs
-      $('.carnage-report-header-graph').css('display', 'inline');
-    }
+		if (destination == "#A") {
+			// hide graphs
+			$('.carnage-report-header-graph').css('display', 'none');
+		}
+		else {
+			// Show dem graphs
+			$('.carnage-report-header-graph').css('display', 'inline');
+		}
 
-    return true;
-  });
+		return true;
+	});
 
-  function show_personal_for_player(player_id)
-  {
-    // hide old shit
-    $('.personal_stats').each(function (i, element) {
-      $(element).css('display', 'none');
-    });
+	function show_personal_for_player(player_id)
+	{
+		// hide old shit
+		$('.personal_stats').each(function (i, element) {
+			$(element).css('display', 'none');
+		});
 
-    // show new shit
-    $('#player_personal_' + player_id).css('display', 'inline');
-  }
-  function show_carnage_for_player(player_id) {
-    // hide old shit
-    $('.carnage_damage_stats').each(function (i, element) {
-      $(element).css('display', 'none');
-    });
+		// show new shit
+		$('#player_personal_' + player_id).css('display', 'inline');
+	}
+	function show_carnage_for_player(player_id) {
+		// hide old shit
+		$('.carnage_damage_stats').each(function (i, element) {
+			$(element).css('display', 'none');
+		});
 
-    // show new shit
-    $('#player_' + player_id).css('display', 'inline');
-  }
-  function show_medals_for_player(player_id) {
-    // hide old shit
-    $('.medal_stats').each(function (i, element) {
-      $(element).css('display', 'none');
-    });
+		// show new shit
+		$('#player_' + player_id).css('display', 'inline');
+	}
+	function show_medals_for_player(player_id) {
+		// hide old shit
+		$('.medal_stats').each(function (i, element) {
+			$(element).css('display', 'none');
+		});
 
-    // show new shit
-    $('#player_medals_' + player_id).css('display', 'inline');
-  }
-  function show_enemys_for_player(player_id) {
-    // hide old shit
-    $('.enemy_stats').each(function (i, element) {
-      $(element).css('display', 'none');
-    });
+		// show new shit
+		$('#player_medals_' + player_id).css('display', 'inline');
+	}
+	function show_enemys_for_player(player_id) {
+		// hide old shit
+		$('.enemy_stats').each(function (i, element) {
+			$(element).css('display', 'none');
+		});
 
-    // show new shit
-    $('#player_enemies_' + player_id).css('display', 'inline');
-  }
+		// show new shit
+		$('#player_enemies_' + player_id).css('display', 'inline');
+	}
