--- a/app/views/halo4/service_record.html.haml
+++ b/app/views/halo4/service_record.html.haml
@@ -2,9 +2,14 @@
 - active_halo4 'active'
 - search_query @service_record['Gamertag']
 - content_for :twitter_meta do
-	%meta{:content => "Branch - #{@service_record['Gamertag']}'s Service Record", :name => "twitter:title"}
-	%meta{:content => "Halo 4 Service Record for #{@service_record['Gamertag']}. ", :name => "twitter:description"}
-	%meta{:content => X343ApiController.GetPlayerModel(params[:gamertag], 'medium'), :name => "twitter:image:src"}
+	%meta{:content => "Branch - #{@service_record['Gamertag']}'s Service Record", :name => "twitter:title"}/
+	%meta{:content => "Halo 4 Service Record for #{@service_record['Gamertag']}.", :name => "twitter:description"}/
+	%meta{:content => X343ApiController.GetPlayerModel(params[:gamertag], 'medium'), :name => "twitter:image:src"}/
+
+- content_for :facebook_meta do
+	%meta{:content => "Branch - #{@service_record['Gamertag']}'s Service Record", :property => "og:title"}/
+	%meta{:content => "Halo 4 Service Record for #{@service_record['Gamertag']}.", :property => 'og:description'}/
+	%meta{:content => X343ApiController.GetPlayerModel(params[:gamertag], 'medium'), :property => "og:image"}/
 
 .row-fluid
 
