--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -112,11 +112,11 @@
 			var gamertag = $('#search-navbar').val();
 			window.location.href = "/search/" + gamertag + "/";
 	}
-
 	$(function () {
 			$("[rel='tooltip']").tooltip();
 	});
 
+	// GoSquared
 	var GoSquared = {};
 	GoSquared.acct = "GSN-152925-H";
 	(function(w){
@@ -132,3 +132,12 @@
 							w.addEventListener("load", gs, false) :
 							w.attachEvent("onload", gs);
 	})(window);
+
+	// Google Analytics
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-41289940-1', 'branchapp.co');
+  ga('send', 'pageview');
