Added hashtag to sharing button

--- a/app/views/halo4/global/_social_sharing.html.haml
+++ b/app/views/halo4/global/_social_sharing.html.haml
@@ -15,7 +15,7 @@
 	%br/
 	.g-plusone{"data-size" => "medium"}
 	%br/
-	%a.twitter-share-button{"data-via" => "alexerax", :href => "https://twitter.com/share"} 
+	%a.twitter-share-button{"data-via" => "alexerax", "data-hashtags" => "branchapp" :href => "https://twitter.com/share"} 
 		Share
 	
 	:javascript
