--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -33,10 +33,10 @@
 
 		- if content_for? :twitter_meta
 			/ twitter card integration
-			%meta{:content => "summary", :name => "twitter:card"}
-			%meta{:content => "@alexerax", :name => "twitter:site"}
-			%meta{:content => "@alexerax", :name => "twitter:creator"}
-			%meta{:content => "http://branchapp.co/", :name => "twitter:domain"}
+			%meta{:content => "summary", :name => "twitter:card"}/
+			%meta{:content => "@alexerax", :name => "twitter:site"}/
+			%meta{:content => "@alexerax", :name => "twitter:creator"}/
+			%meta{:content => "http://branchapp.co/", :name => "twitter:domain"}/
 			= yield(:twitter_meta)
 
 		- if content_for? :facebook_meta
