--- a/app/views/halo4/global/_social_sharing.html.haml
+++ b/app/views/halo4/global/_social_sharing.html.haml
@@ -2,6 +2,13 @@
 	%h3
 		Share:
 	#fb-root
+		.fb-like{"data-font" => "arial", "data-layout" => "button_count", "data-send" => "false", "data-show-faces" => "true", "data-width" => "450"}
+	%br/
+	.g-plusone{"data-size" => "medium"}
+	%br/
+	%a.twitter-share-button{"data-via" => "alexerax", "data-hashtags" => "branchapp", :href => "https://twitter.com/share"} 
+		Share
+	
 	:javascript
 		(function(d, s, id) {
 			var js, fjs = d.getElementsByTagName(s)[0];
@@ -11,14 +18,6 @@
 			fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));
 
-	.fb-like{"data-font" => "arial", "data-layout" => "button_count", "data-send" => "false", "data-show-faces" => "true", "data-width" => "450"}
-	%br/
-	.g-plusone{"data-size" => "medium"}
-	%br/
-	%a.twitter-share-button{"data-via" => "alexerax", "data-hashtags" => "branchapp" :href => "https://twitter.com/share"} 
-		Share
-	
-	:javascript
 		!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
 
 		window.___gcfg = {lang: 'en-GB'};
