--- a/app/views/halo4/global/_social_sharing.html.haml
+++ b/app/views/halo4/global/_social_sharing.html.haml
@@ -1,12 +1,12 @@
 .well
 	%h3
 		Share:
-	#fb-root
-		.fb-like{"data-font" => "arial", "data-layout" => "button_count", "data-send" => "false", "data-show-faces" => "true", "data-width" => "450"}
+		
+	.fb-like{"data-font" => "arial", "data-layout" => "button_count", "data-send" => "false", "data-show-faces" => "true", "data-width" => "450"}
 	%br/
 	.g-plusone{"data-size" => "medium"}
 	%br/
-	%a.twitter-share-button{"data-via" => "alexerax", "data-hashtags" => "branchapp", :href => "https://twitter.com/share"} 
+	%a.twitter-share-button{"data-hashtags" => "branchapp", :href => "https://twitter.com/share"} 
 		Share
 	
 	:javascript
