--- a/app/views/blog/view.html.haml
+++ b/app/views/blog/view.html.haml
@@ -1,15 +1,17 @@
 - title " - #{@blog_entry.title}"
 - #active_halo4 'active'
 
-.row-fluid
-	.well.offset3.span6{ style: 'padding: 30px;' }
-		%h1
-			#{@blog_entry.title}
-		%h6
-			Posted at #{@blog_entry.updated_at}, by Xerax
-		%hr/
+.container
+	.span10{ style: 'margin: 30px;' }
+		.well
+			%h1
+				#{@blog_entry.title}
+			%h6
+				Posted at #{@blog_entry.updated_at}, by Xerax
+			%hr/
 
-		%p
-			#{@blog_entry.body}
+			%p
+				#{@blog_entry.body}
 
 		/ Social Sharing Stuff
+		= render partial: 'halo4/global/social_sharing'
