--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -57,9 +57,8 @@
 				%h3 Development Blog:
 			/ /span
 		.row-fluid
-		- blogs = BlogPost.all
 		- i = 0
-		- blogs.each do |blog|
+		- @blog_posts.each do |blog|
 			- break if i > 3
 			- i += 1
 			.span4
