updated placeholder swag

--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -50,8 +50,8 @@
 
 	.span9
 		.hero-unit
-			%h1 sup
-			%p dem stats
+			%h1 Branch
+			%p Detailed Halo 4 Stats, that don't suck.
 		.row-fluid
 			.span4
 				%h3 Development Blog:
