Added some more meta tags (Fixes #5)

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -44,8 +44,8 @@
 			%meta{:content => "Branch - Halo 4 Stats", :property => "og:site_name"}/
 			= yield(:facebook_meta)
 
-		%meta{:content => "", :name => "description"}/
-		%meta{:content => "", :name => "author"}/
+		%meta{:content => "In Depth Halo 4 Statistic Tracking and Viewing.", :name => "description"}/
+		%meta{:content => "Alex Reed (Xerax)", :name => "author"}/
 		= csrf_meta_tags
 	%body
 		.navbar.navbar.navbar-fixed-top
