Changed site to say beta, instead of alpha (Fixes #11)

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -57,7 +57,7 @@
 						%span.icon-bar
 					%a.brand{:href => "/"}
 						Branch
-						%sup {alpha}
+						%sup {beta}
 					.nav-collapse.collapse
 						%p.navbar-text.pull-right
 							Powered by
