--- a/app/views/blog/view.html.erb
+++ b/app/views/blog/view.html.erb
@@ -1,18 +1,16 @@
 <% title " - #{@blog_entry.title}" %>
 <% active_blog 'active' %>
 
-<div class="container">
-	<div class="span10" style="margin: 30px;">
-		<div class="well">
-			<h1><%= @blog_entry.title %></h1>
+<div class="span12">
+	<div class="well">
+		<h1><%= @blog_entry.title %></h1>
 
-			<h6>Posted at <%= @blog_entry.updated_at %>, by Xerax</h6>
+		<h6>Posted at <%= @blog_entry.updated_at %>, by Xerax</h6>
 
-			<hr />
+		<hr />
 
-			<%= @markdown.render(@blog_entry.body).html_safe %>
-		</div>
-
-		<%= render partial: 'halo4/global/social_sharing' %>
+		<%= @markdown.render(@blog_entry.body).html_safe %>
 	</div>
+
+	<%= render partial: 'halo4/global/social_sharing' %>
 </div>
