fluid container fix

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -90,7 +90,7 @@
 			.container-fluid{ :style => "margin-top: 80px; max-width: 1600px; min-width: 1200px;" }
 				= yield
 		- else
-			.container-fluid{ :style => "margin-top: 80px; max-width: 1600px; min-width: 1200px;" }
+			.container{ :style => "margin-top: 80px; max-width: 1600px; min-width: 1200px;" }
 				= yield
 
 		%hr/
