--- a/app/views/halo4/view_match/carnage_quick_view/_carnage_war_games_quick_view_team.html.haml
+++ b/app/views/halo4/view_match/carnage_quick_view/_carnage_war_games_quick_view_team.html.haml
@@ -1,4 +1,4 @@
-- teams_in_order = @match['Teams'].sort_by { |team| team['Score'] }
+- teams_in_order = @match['Teams'].sort_by { |team| team['Score'] }.reverse
 - teams_in_order.each do |team|
   %table.team-table.table.table-bordered.table-striped.table-hover
     %thead
