updated about page

--- a/app/views/application/about.html.haml
+++ b/app/views/application/about.html.haml
@@ -24,12 +24,14 @@
 					%br/
 					It's about 2mb less clutter than HaloWaypoint, and we provide as much juicy data. Just in a more.. Familiar and Friendly format.
 
+				%br/
 				%p
 					%strong
 						How often can I update my stats?
 					%br/
 					It depends on the stats. Service Records, Commendations, Game Histories, and Specilizations update every 8 minutes. A Matchs History never update, as they will never change.
 
+				%br/
 				%p
 					%strong
 						Dude, I have like a really cool idea.
@@ -39,6 +41,7 @@
 						here
 					, and i'll see what can be done.
 
+				%br/
 				%p
 					%strong
 						Can I have Sauce?
@@ -62,6 +65,11 @@
 						!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
 
 			%h4
+				Thanks To
+			.well
+				Adam Swaine (Swaino) - Testing and Helping Spread the Word
+
+			%h4
 				Sources
 			.well
 				%a{href: 'http://twitter.github.io/bootstrap/'}
@@ -80,6 +88,10 @@
 					morris.js
 				#{"-> Sexy looking Javascript charts"}
 				%br/
+				%a{href: 'http://gridster.net/'}
+					gridster.js
+				#{"-> Awesome grid/layout system"}
+				%br/
 				%a{href: 'http://rubyonrails.org/'}
 					RubyOnRails
 				#{"-> A pretty good web programming language"}
@@ -88,5 +100,14 @@
 			%h4
 				The Tree
 			.well
-				Branched Hard
+				%a{href: 'http://leafapp.co/'}
+					Leaf
+				%br/
+				%a{href: 'http://branchapp.co/'}
+					Branch
+				(ßeta)
+				%br/
+				%a{href: 'http://twigapp.co/'}
+					Twig
+				(Under Construction)
 				
