--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -1,5 +1,6 @@
-- title " - #{params[:gamertag]}'s Search Results"
+- title " - #{params[:q]}'s Search Results"
 - active_home 'active'
+- search_query params[:q]
 
 %span{:style => 'font-size: 45px;'} Halo 4
 .hero-unit{:style => 'margin-top: -15px;'}
